--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-  <link rel="stylesheet" href="css/styles.css">
-  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+  <link rel="stylesheet" href="styles.css">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap" rel="stylesheet">
@@ -23,7 +23,7 @@
     }
 
     body {
-      background-image: url(images/pattern-background-desktop.svg);
+      background-image: url(pattern-background-desktop.svg);
       background-repeat: no-repeat;
       background-color: #E0E8FF;
     }
@@ -33,7 +33,7 @@
 <body>
   <div class="full-container">
     <div class="top-container">
-      <img class="hero" src="images/illustration-hero.svg" alt="hero-image">
+      <img class="hero" src="illustration-hero.svg" alt="hero-image">
     </div>
     <div class="middle-container">
       <h1><strong>Order Summary</strong></h1>
@@ -42,7 +42,7 @@
         device anywhere you like!</p><br>
     </div>
     <div class="annual-plan">
-      <img class="music" src="images/icon-music.svg" alt="music-icon">
+      <img class="music" src="icon-music.svg" alt="music-icon">
       <h2 class="plan"><strong>Annual Plan</strong></h2>
       <p class="change"> <strong>Change</strong></p>
       <p class="price">$59.99/year</p>
